@@ -1,3 +1,8 @@
+2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* src/mod_mono.c: added NOT_FOUND command and prevent invalid commands
+	from crashing mod_mono.
+
 2004-07-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* configure.in:
